[JSC] Fix assertion in attemptToForceStringArrayModeByToStringConversion for DFG fix up phase https://bugs.webkit.org/show_bug.cgi?id=257362 rdar://109642729

Reviewed by Yusuke Suzuki.

Since attemptToForceStringArrayModeByToStringConversion is only
used in attemptToMakeGetArrayLength we only need to assert Array::Generic
and Array::Read for the sanity check.

* Source/JavaScriptCore/dfg/DFGFixupPhase.cpp:
(JSC::DFG::FixupPhase::attemptToForceStringArrayModeByToStringConversion):

Canonical link: https://commits.webkit.org/264546@main